mise a jour note
